--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -3,12 +3,12 @@
   background-position: center;
   height: 60vh;
   padding: 150px 0;
-  .container{
-    width: 70%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+  // .container{
+  //   width: 70%;
+  //   display: flex;
+  //   flex-direction: column;
+  //   align-items: center;
+  // }
   // .btn{
   //   margin-top: 20px;
   //   padding: 10px 50px;
