--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,18 +4,18 @@
     <p>
       <span id="banner-typed-text"></span>
     </p>
+    <%= form_tag items_path, method: :get do %>
+      <div class="search-form-control form-group">
+        <%= text_field_tag :query,
+          params[:query],
+          class: "form-control string required",
+          id: "search_query",
+          placeholder: "Find your next wedding inspiration..."
+        %>
+        <%= submit_tag "Search", class: "btn btn-search" %>
+      </div>
+    <% end %>
   </div>
-  <%= form_tag items_path, method: :get do %>
-    <div class="search-form-control form-group">
-      <%= text_field_tag :query,
-        params[:query],
-        class: "form-control string required bg-dark",
-        id: "search_query",
-        placeholder: "Find your next"
-      %>
-      <%= submit_tag "Search", class: "btn btn-search" %>
-    </div>
-  <% end %>
 </div>
 
 <div class="cards home-cards">
