--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -3,10 +3,10 @@
   <h2><strong><%= @item.name %></strong></h2>
   <hr>
 </div>
-
+    <%= link_to 'Go back', items_path, class: "btn-ghost ml-4" %>
 <div class="cards-item">
   <div class="card-item">
-    <p><strong>Description:</strong></p>
+    <h3><strong>Description:</strong></h3>
     <p class="text-justify mx-4"> <%= @item.description %> </p>
     <p><strong>Category:</strong> <%= @item.category.name %> </p>
     <% if @item.price % 1 == 0 %>
@@ -22,20 +22,20 @@
           <% end %></p>
     <p><strong>Owner:</strong> <%= "#{@item.user.first_name} #{@item.user.last_name}" %> </p>
 
-    <%= link_to 'Go back', items_path, class: "btn-ghost ml-4" %>
+
 
   <% if user_signed_in? && policy(Booking).new? %>
     <%= link_to 'Add booking', new_item_booking_path(@item), class: "btn-ghost" %>
   <% end %>
-
   <% if user_signed_in? && policy(@item).edit? %>
     <%= link_to 'Edit Item', edit_item_path(@item), class: "btn-ghost ml-4" %>
   <% end %>
     </div>
+
     <% if @item.photo.attached? %>
-        <div class="card-image" style="border-radius:5px; background-image: url('<%= cl_image_path @item.photo.key, :crop => "fit" %>')"></div>
+        <div class="card-image" data-toggle="modal" data-target="#exampleModal" style="border-radius:5px; background-image: url('<%= cl_image_path @item.photo.key,:background=>"white", :gravity=>"auto", :height=>800, :width=>800, :crop=>"fill_pad" %>')"></div>
     <%else%>
-      <div class="card-image" style="border-radius:5px; background-image: url(https://images.unsplash.com/photo-1502727135886-df285cc8379f?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8d2VkZGluZyUyMGRyZXNzfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60)"></div>
+      <div class="card-image" data-toggle="modal" data-target="#exampleModal" style="border-radius:5px; background-image: url(https://images.unsplash.com/photo-1502727135886-df285cc8379f?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8d2VkZGluZyUyMGRyZXNzfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60)"></div>
     <%end%>
 </div>
 <br>
@@ -49,7 +49,7 @@
     <% else %>
       <h3><%= pluralize @item.reviews.size, "review" %> for <%= @item.name %></h3>
     <% end %>
-  
+
 
     <div class="d-flex mt-4 mb-4">
       <div class="reviews col-6">
@@ -76,4 +76,29 @@
       </div>
     </div>
 
+</div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" >
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel"><%= @item.name %></h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" style="height:80vh">
+        <% if @item.photo.attached? %>
+          <div class="" style="border-radius:5px; height:100%; background-image: url('<%= cl_image_path @item.photo.key, :background=>"white", :gravity=>"auto", :height=>800, :width=>800, :crop=>"fill_pad" %>')"></div>
+        <%else%>
+          <div class="" style="border-radius:5px; background-image: url(https://images.unsplash.com/photo-1502727135886-df285cc8379f?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8d2VkZGluZyUyMGRyZXNzfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60)"></div>
+        <%end%>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
 </div>
