--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,10 +1,10 @@
-<div class="col-8 mx-auto mt-4">
+<div class="col-6 mx-auto mt-5">
   <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= f.error_notification %>
 
-    <div class="form-inputs col-8">
+    <div class="form-inputs">
       <%= f.input :email, required: true, autofocus: true %>
       <%= f.input :first_name, required: true, autofocus: true %>
       <%= f.input :last_name, required: true, autofocus: true %>
@@ -29,7 +29,7 @@
     </div>
 
     <div class="form-actions">
-      <%= f.button :submit, "Update", class:'btn btn-primary' %>
+      <%= f.button :submit, "Update my account", class:'btn btn-primary btn-lg btn-block' %>
     </div>
   <% end %>
   <br>
