--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,9 @@
-<div class="col-8 mx-auto mt-4">
+<div class="col-6 mx-auto mt-4">
 
   <h2>Sign up</h2>
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <div class="form-inputs col-8">
+
     <%= f.error_notification %>
 
       <%= f.input :email,
@@ -35,9 +35,9 @@
                   input_html: { autocomplete: "new-password" } %>
 
       <div class="form-actions">
-        <%= f.button :submit, "Sign up", class: "btn-flat" %>
+        <%= f.button :submit, "Sign up", class: "btn-flat btn-lg btn-block" %>
       </div>
-    </div>
+
   <% end %>
   <hr>
   <h2>Have an account with us already?</h2>
