--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,15 +1,5 @@
 <h1 class="text-center mt-4 py-3">All my bookings</h1>
-<div class="tabs">
-  <div class="tabs-item">
-    <h3 id="header-1">COMMENT</h3>
-  </div>
-  <div class="tabs-item">
-    <h3 id="header-2">START DATE</h3>
-  </div>
-  <div class="tabs-item" id="third-item">
-    <h3 id="header-3">END DATE</h3>
-  </div>
-</div>
+
 <ol>
   <% @bookings.each do |booking| %>
     <li class="tabs">
@@ -21,3 +11,17 @@
     </li>
   <% end %>
 </ol>
+
+<div class="container vh-100">
+  <div class="cards-booking">
+    <% @bookings.each do |booking| %>
+      <div class="card-product">
+        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+        <div class="card-product-infos">
+          <h2><%= booking.comment%></h2>
+          <p>Product description with <strong>relevant info</strong> only.</p>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
