--- a/app/assets/stylesheets/items/_items.scss
+++ b/app/assets/stylesheets/items/_items.scss
@@ -1,8 +1,8 @@
 .index-display{
   display: flex;
   .cards{
-    grid-template-columns: 1fr;
-    width: 60%;
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
   }
   .card-trip{
     height: 400px;
